--- a/src/main/resources/templates/funcionario.html
+++ b/src/main/resources/templates/funcionario.html
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li>
-            <a thref="./conversor">
+            <a href="./conversor">
               <i class="now-ui-icons arrows-1_refresh-69"></i>
               <p>Conversor Monetário</p>
             </a>
@@ -60,6 +60,12 @@
             <a th:href="@{/funcionario}">
               <i class="now-ui-icons users_single-02"></i>
               <p>Usuários</p>
+            </a>
+          </li>
+          <li>
+            <a th:href="@{/relatorio}">
+              <i class="now-ui-icons files_paper"></i>
+              <p>Relatório</p>
             </a>
           </li>
         </ul>
@@ -79,11 +85,11 @@
             </div>
             <a class="navbar-brand">Usuários</a>
           </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-          </button>
+<!--          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-bar navbar-kebab"></span>-->
+<!--            <span class="navbar-toggler-bar navbar-kebab"></span>-->
+<!--            <span class="navbar-toggler-bar navbar-kebab"></span>-->
+<!--          </button>-->
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
               <li class="nav-item">
