--- a/src/main/resources/templates/conversor.html
+++ b/src/main/resources/templates/conversor.html
@@ -62,6 +62,12 @@
               <p>Usuários</p>
             </a>
           </li>
+          <li>
+            <a th:href="@{/relatorio}">
+              <i class="now-ui-icons files_paper"></i>
+              <p>Relatório</p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
@@ -79,11 +85,6 @@
             </div>
             <a class="navbar-brand">Conversor Monetário</a>
           </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-          </button>
         </div>
       </nav>
       <!-- End Navbar -->
