--- a/src/main/resources/templates/updatereceita.html
+++ b/src/main/resources/templates/updatereceita.html
@@ -62,6 +62,12 @@
               <p>Usuários</p>
             </a>
           </li>
+          <li>
+            <a th:href="@{/relatorio}">
+              <i class="now-ui-icons files_paper"></i>
+              <p>Relatório</p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
